homepage dynamic data ok

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     
-    <div class="mon apli">
+    <div class="mon-apli">
+        <h1 class="header">Récupération des appareils photos depuis l'API</h1>
 
         <div id="cart" >
-           
 
         </div>
 
